--- a/english-cv/cover-letter.tex
+++ b/english-cv/cover-letter.tex
@@ -116,10 +116,16 @@
 \begin{cvletter}
 
 \textbf{Dear Hiring Manager,}
+%I am a passionate engineer who has recently finished his PhD and is looking for new opportunities to grow as a professional. I always loved to obtain new insights from data. Although I have some experience implementing and using machine learning algorithms and data science tools, my career has been more on the low level side so far, I am familiar with infrastructure, parallelization and Linux in general. But I wish to work more higher level languages that allow me to focus on making programs smarter, while optimizing performance as much as possible.
 
 I am a highly curious and motivated individual that is looking for job opportunities that allow me to grow as a professional and as a person, I am looking forward to apply my researching and learning skills to real world challenges, where the software we create actually makes a difference. My main motivation applying for this job is to pursue an exciting career path I always wanted to explore, extracting knowledge from data while applying machine learning techniques. My dream job is a place where team work is encouraged, where there’s always new technical problems to solve, amazing people to learn from and where the company culture values diversity and actually cares for the employee’s happiness.
+%Soy una persona muy curiosa y motivada que busca oportunidades de trabajo que me permitan crecer como profesional y como persona, estoy deseando aplicar mis habilidades de investigación y aprendizaje a retos del mundo real, donde el software que creamos realmente marque la diferencia. Mi principal motivación para solicitar este trabajo es tomar trayectoria profesional que siempre he querido explorar, extraer conocimientos de los datos aplicando técnicas de aprendizaje automático e inteligencia artificial. El trabajo de mis sueños es un lugar donde se fomente el trabajo en equipo, donde siempre haya nuevos retos que resolver, personas increíbles de las que aprender y donde la cultura de la empresa valore la diversidad y se preocupe realmente por la felicidad de los empleados.
+
+
 
 During my Master’s degree, I implemented some machine learning algorithms in Python and gained some experience with MapReduce/Spark ({\color{blue}\href{https://github.com/mizadri/big-data}{git}}). During my thesis, I also have worked with sk-learn (applying clustering algorithms like k-means) and numpy/ipyparallel to look for the optimal cache partitioning solution using a B\&B approach; I also used WEKA to explore methods of estimating the Slowdown that threads suffer from sharing the system with different runtime metrics gathered with PMCs. Most of the experimental analyses for research papers and data cleaning was done in Jupyther Notebooks, calculating different runtime metrics with pandas and building visualizations with matplotlib. 
+%En mi máster, implementé algunos algoritmos de aprendizaje automático en Python y adquirí cierta experiencia con MapReduce/Spark ( https://github.com/mizadri/big-data ). Durante mi tesis, también he trabajado con sk-learn (aplicando algoritmos de clustering como k-means) y numpy/ipyparallel para buscar la solución óptima de particionado de la caché utilizando un enfoque B&B; también he utilizado WEKA para explorar métodos de estimación de Slowdown. La mayor parte de los análisis experimentales para los trabajos de investigación y la limpieza de datos se realizó en Jupyther Notebooks, calculando diferentes métricas de tiempo de ejecución con pandas y construyendo visualizaciones con matplotlib. 
+
 
 \end{cvletter}
 
